5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1679_1101.log
== TEST (2019-05-01 19:23:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("Qual o consumo: "))
ti=input("Qual o tipo de instalacao: R, C ou I: ")
if (x <= 0) or (ti != "R") or (ti != "C") or (ti != "I"):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Dados invalidos")
elif (ti=="R"):
	if (c <= 500):
		preco=0.44
	else:
		preco=0.65
elif (ti=="C"):
	if (c <= 1000):
		preco=0.55
	else:
		preco=0.60
elif (ti=="I"):
	if (c <= 5000):
		preco=0.55
	else:
		preco=0.60
if (preco > 0):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Valor total: R$", round(preco*c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (x <= 0) or (ti != "R") or (ti != "C") or (ti != "I"):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:24:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("Qual o consumo: "))
ti=input("Qual o tipo de instalacao: R, C ou I: ")
if (c <= 0) or (ti != "R") or (ti != "C") or (ti != "I"):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Dados invalidos")
elif (ti=="R"):
	if (c <= 500):
		preco=0.44
	else:
		preco=0.65
elif (ti=="C"):
	if (c <= 1000):
		preco=0.55
	else:
		preco=0.60
elif (ti=="I"):
	if (c <= 5000):
		preco=0.55
	else:
		preco=0.60
if (preco > 0):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Valor total: R$", round(preco*c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    if (preco > 0):
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:25:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("Qual o consumo: "))
ti=input("Qual o tipo de instalacao: R, C ou I: ")
if (c <= 0) or (ti != "R") or (ti != "C") or (ti != "I"):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Dados invalidos")
elif (ti=="R"):
	if (c <= 500):
		preco=0.44
	else:
		preco=0.65
elif (ti=="C"):
	if (c <= 1000):
		preco=0.55
	else:
		preco=0.60
elif (ti=="I"):
	if (c <= 5000):
		preco=0.55
	else:
		preco=0.60
if (c > 0):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Valor total: R$", round(preco*c,2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:26:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("Qual o consumo: "))
ti=input("Qual o tipo de instalacao: R, C ou I: ")
preco=0
if (c <= 0) or (ti != "R") or (ti != "C") or (ti != "I"):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Dados invalidos")
elif (ti=="R"):
	if (c <= 500):
		preco=0.44
	else:
		preco=0.65
elif (ti=="C"):
	if (c <= 1000):
		preco=0.55
	else:
		preco=0.60
elif (ti=="I"):
	if (c <= 5000):
		preco=0.55
	else:
		preco=0.60
if (preco > 0):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Valor total: R$", round(preco*c,2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:28:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("Qual o consumo: "))
ti=input("Qual o tipo de instalacao: R, C ou I: ")
preco=0
if (c <= 0) or (not(ti == "R") and not (ti == "C") and not (ti == "I")):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Dados invalidos")
elif (ti=="R"):
	if (c <= 500):
		preco=0.44
	else:
		preco=0.65
elif (ti=="C"):
	if (c <= 1000):
		preco=0.55
	else:
		preco=0.60
elif (ti=="I"):
	if (c <= 5000):
		preco=0.55
	else:
		preco=0.60
if (preco > 0):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Valor total: R$", round(preco*c,2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:28:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("Qual o consumo: "))
ti=input("Qual o tipo de instalacao: R, C ou I: ")
preco=0
if (c <= 0) or (not(ti == "R") and not (ti == "C") and not (ti == "I")):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Dados invalidos")
elif (ti=="R"):
	if (c <= 500):
		preco=0.44
	else:
		preco=0.65
elif (ti=="C"):
	if (c <= 1000):
		preco=0.55
	else:
		preco=0.60
elif (ti=="I"):
	if (c <= 5000):
		preco=0.55
	else:
		preco=0.60
if (preco > 0):
	print("Entradas:", c, "kWh e tipo", ti)
	print("Valor total: R$", round(preco*c,2))
-- EXECUTION TIME:
0.227077
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
